# filter_tutor

./: .gitignore  README.md
rosbag2_ultimate/: rosbag2_2025_07_04-20_10_58_0.db3
src/curve_fitter/: CMakeLists.txt  package.xml
src/curve_fitter/include/curve_fitter/: curve_fitter.hpp  simulator.h
src/curve_fitter/rosbag2_ultimate/: metadata.yaml
src/curve_fitter/src/: curve_fitter.cpp  simulator.cpp  test_node.cpp
src/kalman_filter/: CMakeLists.txt  package.xml
src/kalman_filter/include/kalman_filter/: kalman.h  simulator.h
src/kalman_filter/src/: kalman.cpp  simulator.cpp  test_node.cpp
src/sim_interfaces/: CMakeLists.txt  package.xml
